# cortex_tape_control_fw

./: .gitignore  CMakeLists.txt  README.md
app/: application.cpp  application.h  version.h
app/io/: debounce copy.h  debounce.cpp  igpio.h  inputs.cpp  inputs.h  types.h
app/system/: systick.cpp  systick.h
app/ui/: Indication.cpp  Indication.hpp
app/ui/controls/: Button.cpp  Button.hpp
app/utils/: idelay.h  itick_timer.h  itime.h  itimer.h  itimer_measurement.h
app/utils/crc/: crc32.h  crc8calc.c  crc8calc.h
arch/stm32f0/io/: shiftregleds.cpp  shiftregleds.h
arch/stm32f0/utils/: delay.c  tick_timer.c  timer.c  timer_measurement.c
bsp/ctc_v1/configs/: SEGGER_RTT_Conf.h  shiftreg_config.h
bsp/ctc_v1/io/: gpio.cpp
bsp/ctc_v1/ui/: ShiftRegInd.hpp
cmake/: CMakeLists.txt  burn.jlink.in  common.cmake  desktop.cmake  mcu.cmake  mcu_f0.cmake  utils.cmake  version.h.in
docs/: pinout.md
docs/img/: back  front
hwtest/: CMakeLists.txt
hwtest/pcb_ctc_v1/: CMakeLists.txt  build.cmake  common.cmake
hwtest/pcb_ctc_v1/buttons/: CMakeLists.txt  hwtest_buttons.cpp
hwtest/pcb_ctc_v1/inputs/: CMakeLists.txt  hwtest_inputs.cpp
hwtest/pcb_ctc_v1/shiftreg/: CMakeLists.txt  hwtest_shiftreg.cpp
hwtest/pcb_ctc_v1/solenoid/: CMakeLists.txt  hwtest_solenoid.cpp
libs/: libs.cmake
libs/Ring-Buffer/: ringbuffer.c  ringbuffer.h
libs/debug/: log_libs.h
targets/: CMakeLists.txt
targets/ctc_v1/: CMakeLists.txt  Makefile  STM32F072CBTx_FLASH.ld  cortex_tape_control_v1.ioc
targets/ctc_v1/Core/Inc/: main.h  stm32f0xx_it.h
targets/ctc_v1/Core/Src/: adc.c  gpio.c  main.c  spi.c  stm32f0xx_it.c  tim.c
targets/emu/: CMakeLists.txt  main.cpp
targets/emu/io_emu/: io_mock.c  io_mock.h
